--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
 		<script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
 		<script>
 			// your code
+			const App = () => {
+				return React.createElement(
+					"div",
+					{},
+					React.createElement("h1", {}, "Adopt me!")
+				);
+			};
 		</script>
 	</body>
 </html>
