Render App to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
 					React.createElement("h1", {}, "Adopt me!")
 				);
 			};
+
+			ReactDOM.render(
+				React.createElement(App), 
+				document.getElementById("root")
+			);
 		</script>
 	</body>
 </html>
